# rac-compile

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
examples/: ctc.cos  eitc.cos  simple_tax.cos  snap.cos
src/cosilico_compile/: __init__.py  cli.py  js_generator.py  parser.py  python_generator.py
src/cosilico_compile/calculators/: ctc.py  eitc.py  snap.py
src/cosilico_compile/validation/: __init__.py  cli.py  comparator.py  cps_loader.py  runners.py
src/rac_compile/: __init__.py  cli.py  js_generator.py  parser.py  python_generator.py
src/rac_compile/calculators/: __init__.py  ctc.py  eitc.py
src/rac_compile/validation/: __init__.py  cli.py  comparator.py  runners.py
tests/: test_cli.py  test_cli_coverage.py  test_coverage_gaps.py  test_js_generator.py  test_parser.py  test_python_generator.py  test_validation_external.py  test_validation_js.py  test_validation_modules.py
