[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosilico-compile"
version = "0.1.0"
description = "Compile Cosilico .cos files to standalone JavaScript calculators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Cosilico", email = "hello@cosilico.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["cosilico", "tax", "benefits", "policy", "compiler", "javascript"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
# PolicyEngine for external validation (heavy dependency, optional)
validation = [
    "policyengine-us>=1.0",
]

[project.scripts]
cosilico-compile = "cosilico_compile.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cosilico_compile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
